--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Materia+Icons" rel="stylesheet">  
+  <!--above link  angular material icon  -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-root> </app-root>
 </body>
 </html>
